--- a/Nithin2003/Views/Home/ContactUs.cshtml
+++ b/Nithin2003/Views/Home/ContactUs.cshtml
@@ -55,9 +55,10 @@
                                             <span class="input-group-text"><i class="ni ni-circle-08"></i></span>
                                         </div>
                                         <input class="form-control" asp-for="@Model.Name" placeholder=" Name" type="text">
-                                        @*<span asp-validation-for="@Model.Username" class="text-danger"></span>*@
+                                        
 
                                     </div>
+                                    <span asp-validation-for="@Model.Name" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
                                     <div class="input-group input-group-merge input-group-alternative">
@@ -65,9 +66,10 @@
                                             <span class="input-group-text"><i class="ni ni-chat-round"></i></span>
                                         </div>
                                         <input class="form-control" asp-for="@Model.Subject" placeholder="Subject" type="text">
-                                        @* <span asp-validation-for="@Model.Password" class="text-danger"></span>*@
+                                        
 
                                     </div>
+                                    <span asp-validation-for="@Model.Subject" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
                                     <div class="input-group input-group-merge input-group-alternative">
@@ -75,9 +77,10 @@
                                             <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                                         </div>
                                         <input class="form-control" asp-for="@Model.Email" placeholder="Enter Email" type="email" />
-                                        <td>@Html.ValidationMessageFor(m => @Model.Email, "", new { @class = "text-danger" })</td>
+                                       
 
                                     </div>
+                                    <td>@Html.ValidationMessageFor(m => @Model.Email, "", new { @class = "text-danger" })</td>
                                 </div>
 
                                 <div class="form-group">
@@ -86,9 +89,10 @@
                                             <span class="input-group-text"><i class="ni ni-mobile-button"></i></span>
                                         </div>
                                         <input class="form-control" asp-for="@Model.Mobile" placeholder="Enter Mobile Number" type="number">
-                                        <span asp-validation-for="@Model.Mobile" class="text-danger"></span>
+                                       
 
                                     </div>
+                                    <span asp-validation-for="@Model.Mobile" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
                                     <div class="input-group input-group-merge input-group-alternative">
@@ -97,7 +101,7 @@
                                         </div>
 
 
-                                        <input type="text" class="form-control" placeholder="Body" name="Body" />
+                                        <input type="text" required  class="form-control" placeholder="Body" name="Body" />
 
                                     </div>
                                 </div>
