--- a/Nithin2003/Views/Shared/_Form.cshtml
+++ b/Nithin2003/Views/Shared/_Form.cshtml
@@ -47,8 +47,8 @@
                 <div class="navbar-collapse-header">
                     <div class="row">
                         <div class="col-6 collapse-brand">
-                            <a asp-controller="Home" asp-action="Index">
-                                <img style="max-height:60px;width:150px;" src="~/Argon-assets/img/Screenshot 2024-11-03 214613.png" class="navbar-brand-img" alt="...">
+                            
+                                <img style="max-height:60px;width:150px;" src="~/Argon-assets/img/Nithinnnnnn.png" class="navbar-brand-img" alt="...">
                             </a>
                             @* <div class="sidenav-header  align-items-center">
                                 <a class="navbar-brand" asp-controller="Home" asp-action="Index" type="button">
