--- a/Nithin2003/Views/Users/ForgotPassword.cshtml
+++ b/Nithin2003/Views/Users/ForgotPassword.cshtml
@@ -62,7 +62,7 @@
                                 </div> *@
                                 
                                 <div class="text-center">
-                                    <input type="submit" class="btn btn-primary my-4" name="btnsubmit" value="Reset" />
+                                    <input type="submit" class="btn btn-primary my-4" name="btnsubmit" value="Request Password" />
                                     <a asp-controller="Home" asp-action="Index" class="btn btn-primary my-4" type="button">Back To Home</a>
 
                                 </div>
