added forgot user naem functionality

--- a/Nithin2003/Views/Home/Index.cshtml
+++ b/Nithin2003/Views/Home/Index.cshtml
@@ -416,7 +416,7 @@
                         <div class="service-box blue">
                             @*  <i class="ri-discuss-line icon"></i> *@
                             <h2>Website Functionality</h2>
-                            <p>This is a Financial Web Application ,it has two Policies Owner and User . Owner is a Master Admin Owner has rights to controll the web application</p>
+                            <p>This is a financial web application, It has two policies owner and user.Owner is a master admin has rights to controll the web application</p>
                             <p></p>
                             @* <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> *@
                         </div>
@@ -603,7 +603,7 @@
                             </h2>
                             <div id="faq-content-1" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
                                 <div class="accordion-body">
-                                    Sign Up is the process of registration an account in application .
+                                    Sign up is the process of registration an account in application.
                                 </div>
                             </div>
                         </div>
@@ -616,7 +616,7 @@
                             </h2>
                             <div id="faq-content-2" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
                                 <div class="accordion-body">
-                                    Sign In is the process of Login with User details Username and Password .
+                                    Sign In is the process of login with User details user name and Password.
                                 </div>
                             </div>
                         </div>
@@ -629,7 +629,7 @@
                             </h2>
                             <div id="faq-content-3" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
                                 <div class="accordion-body">
-                                    User need to verify Email with OTP ,If user does not verify email it show a popup page Your email is not verifed .
+                                    User need to verifyeEmail with OTP, If user does not verify email it show a popup page your email is not verifed.
                                 </div>
                             </div>
                         </div>
@@ -650,7 +650,7 @@
                         </h2>
                         <div id="faq-content-1" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
                             <div class="accordion-body">
-                                Dashboard shows the User details who was in login.
+                                Dashboard shows the user details who was in login.
                             </div>
                         </div>
                     </div>
@@ -664,7 +664,7 @@
                         </h2>
                         <div id="faq2-content-2" class="accordion-collapse collapse" data-bs-parent="#faqlist2">
                             <div class="accordion-body">
-                                Transfer Money is the process of tranfering money from one user to another .If amount is less than account balance it will not transfer.
+                                Transfer money is the process of tranfering money from one user to another .If amount is less than account balance it will not transfer.
                             </div>
                         </div>
                     </div>
@@ -818,6 +818,7 @@
                             <div class="portfolio-links">
                                 <a href="~/flex-assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Card 3"><i class="bi bi-plus"></i></a>
                                 <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+                                @* <a asp-controller="ShoppingCart" asp-action="AddToCart" asp-route-id="@Model.Id" class="btn btn-primary my-4" /> *@
                             </div>
                         </div>
                     </div>
