--- a/Nithin2003/Views/Users/SignIn.cshtml
+++ b/Nithin2003/Views/Users/SignIn.cshtml
@@ -113,6 +113,8 @@
                                     <a asp-controller="Users" asp-action="AddDetails"  type="button" class="btn btn-primary my-4"> Sign Up</a>
                                     <h5 class="text-Black"> Forgot Password? Not to worry! Lets get you a password</h5>
                                     <a asp-controller="Users" asp-action="ForgotPassword" type="button" class="btn btn-primary my-4"> Forgot Password</a>
+                                    <h5 class="text-Black"> Forgot Username? Not to worry! Lets get you a Username</h5>
+                                    <a asp-controller="Users" asp-action="ForgotUsername" type="button" class="btn btn-primary my-4"> Forgot User Name</a>
                             </div>
                                 
                         </form>
