Homepage content updates

--- a/Nithin2003/Views/Home/Index.cshtml
+++ b/Nithin2003/Views/Home/Index.cshtml
@@ -282,7 +282,7 @@
                                 <p>Master Admin is the one who can approve the new users once they can verify the email id after sign-up</p>
                                 <div class="d-flex align-items-center mb-2">
                                     <i class="bi bi-check2"></i>
-                                    <h4>Admin can suspend the user if they voilates the policies</h4>
+                                    <h4>Admin can suspend the user if they violates the policies</h4>
                                 </div>
 
                                 <div class="d-flex align-items-center mb-2">
@@ -612,13 +612,13 @@
 
     </div>
     </div> *@
-    @* <!-- ======= F.A.Q Section ======= -->
+     <!-- ======= F.A.Q Section ======= -->
     <section id="faq" class="faq">
 
     <div class="container" data-aos="fade-up">
 
     <header class="section-header">
-    <h2>About Functionalities</h2>
+    <h2>What other functionalities this web application</h2>
 
     </header>
 
@@ -629,12 +629,12 @@
     <div class="accordion-item">
     <h2 class="accordion-header">
     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-1">
-    Sign Up
+    Contact form sumbission
     </button>
     </h2>
     <div id="faq-content-1" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
     <div class="accordion-body">
-    Sign up is the process of registration an account in application.
+    User can contact Admin directly through Contact us form if user faces any issues and email will be sent to the admin
     </div>
     </div>
     </div>
@@ -642,12 +642,12 @@
     <div class="accordion-item">
     <h2 class="accordion-header">
     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-2">
-    Sign In
+    Forget password
     </button>
     </h2>
     <div id="faq-content-2" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
     <div class="accordion-body">
-    Sign In is the process of login with User details user name and Password.
+    User can request a password by entering username, email will be sent to the User registered mail id if username matches
     </div>
     </div>
     </div>
@@ -655,12 +655,12 @@
     <div class="accordion-item">
     <h2 class="accordion-header">
     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-3">
-    Email Verification
+    Working with Ajax calls and Web API - progess
     </button>
     </h2>
     <div id="faq-content-3" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
     <div class="accordion-body">
-    User need to verifyeEmail with OTP, If user does not verify email it show a popup page your email is not verifed.
+    I'm working on Ajax calls and Web API integration currently and it is in progess
     </div>
     </div>
     </div>
@@ -669,7 +669,7 @@
     </div>
 
 
-    <div class="col-lg-6">
+  @*  <div class="col-lg-6">
 
     <!-- F.A.Q List 2-->
     <div class="accordion accordion-flush" id="faqlist2">
@@ -714,8 +714,8 @@
 
     </div>
     </div>
-    </div>
-    </div>
+    </div>*@
+    @*</div>
 
 
     </section><!-- End F.A.Q Section -->
@@ -848,7 +848,7 @@
     <p>Card</p>
     <div class="portfolio-links">
     <a href="~/flex-assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Card 3"><i class="bi bi-plus"></i></a>
-    <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+    <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>*@
     @* <a asp-controller="ShoppingCart" asp-action="AddToCart" asp-route-id="@Model.Id" class="btn btn-primary my-4" /> *@
     @* </div>
     </div>
