--- a/Nithin2003/Views/Users/SignIn.cshtml
+++ b/Nithin2003/Views/Users/SignIn.cshtml
@@ -113,7 +113,7 @@
                                     <a asp-controller="Users" asp-action="AddDetails"  type="button" class="btn btn-primary my-4"> Sign Up</a>
                                     <h5 class="text-Black"> Forgot Password? Not to worry! Lets get you a password</h5>
                                     <a asp-controller="Users" asp-action="ForgotPassword" type="button" class="btn btn-primary my-4"> Forgot Password</a>
-                                   
+                                    <a asp-controller="Ajax" asp-action="Index" type="button" class="btn btn-primary my-4">  Up</a>
                             </div>
                                 
                         </form>
