--- a/Nithin2003/Views/Ajax/Index.cshtml
+++ b/Nithin2003/Views/Ajax/Index.cshtml
@@ -1,18 +1,18 @@
 ﻿@{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Form.cshtml";
+  
 }
 
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width"/>
-    <title>Index</title>
+    <meta charset="UTF-8">
+    <title>Calculator</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-    
-
 
 
 
@@ -24,8 +24,8 @@
             <div class="header-body text-center mb-7">
                 <div class="row justify-content-center">
                     <div class="col-xl-5 col-lg-6 col-md-8 px-5">
-                        
-                        @* <p class="text-lead text-white"> To Sign In </p>*@
+                        <h1 class="text-white"></h1>
+
                     </div>
                 </div>
             </div>
@@ -42,30 +42,29 @@
             <div class="col-lg-5 col-md-7">
                 <div class="card bg-secondary border-0 mb-0">
                     <div class="card-header bg-transparent pb-5">
-                        
+
                         <div class="card-body px-lg-5 py-lg-5">
-                            <div class="text-center text-muted mb-4">                               
+                            <div class="text-center text-muted mb-4">
+                               @*  <small> Sign in with credentials</small> *@
                             </div>
-                            <input type="text" id="txtName" />
-                            <input type="button" id="btnGet" value="Get Current Time" />
-                            <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-                            <script type="text/javascript">
-                                $(function () {
-                                    $("#btnGet").click(function () {
-                                        $.ajax({
-                                            type: "POST",
-                                            url: "/Ajax/AjaxMethod",
-                                            data: { "name": $("#txtName").val() },
-                                            success: function (response) {
-                                                alert("Hello: " + response.Name + " .\nCurrent Date and Time: " + response.DateTime);
-                                            },
-                                            failure: function (response) {
-                                                alert(response.responseText);
-                                            },
-                                            error: function (response) {
-                                                alert(response.responseText);
-                                            }
-                                        });
+                            <span id="spanMsg"></span>
+
+                            <script>
+                                $(document).ready(function () {
+                                    const val1 = 5;
+                                    const val2 = 2;
+
+                                    $.ajax({
+                                        type: "POST",
+                                        url: "@Url.Action("Calculator")",
+                                        data: { number1: val1, number2: val2 },
+                                        dataType: "text",
+                                        success: function (msg) {
+                                            document.getElementById("spanMsg").textContent = JSON.stringify(msg);
+                                        },
+                                        error: function (req, status, error) {
+                                            document.getElementById("spanMsg").textContent = error;
+                                        }
                                     });
                                 });
                             </script>
@@ -76,5 +75,6 @@
         </div>
     </div>
 </div>
+
 </body>
 </html>
