--- a/Nithin2003/Views/Home/Index.cshtml
+++ b/Nithin2003/Views/Home/Index.cshtml
@@ -1192,7 +1192,7 @@
                 </div>
 
                 <div class="col-lg-6">
-                    <form action="/Home/ContactUs" method="post" class="php-email-form">
+                            <form action="Home/HomepageContactUs" method="post" class="container">
                         <div class="row gy-4">
 
                             <div class="col-md-6">
@@ -1208,14 +1208,14 @@
                             </div>
 
                             <div class="col-md-12">
-                                <textarea class="form-control" name="Subject" rows="6" placeholder="Mobile" required></textarea>
+                                <textarea class="form-control" name="Subject" rows="6" placeholder="Subject" required></textarea>
                             </div>
 
                             <div class="col-md-12 text-center">
-                                <div class="loading">Loading</div>
+                                @* <div class="loading">Loading</div>
                                 <div class="error-message"></div>
                                 <div class="sent-message">Your message has been sent. Thank you!</div>
-
+ *@
                                 <button type="submit">Send Message</button>
                             </div>
 
@@ -1228,8 +1228,8 @@
             </div>
 
         </div>
-
-    </section><!-- End Contact Section -->
+        
+            </section><!-- End Contact Section -->
     <!-- ======= Footer ======= -->
     @* <footer id="footer" class="footer">
 
@@ -1262,7 +1262,7 @@
                         @*<a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
                         <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
                         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>*@
-                        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                                <a href="https://www.linkedin.com/in/nithin-dhasari-30263b335/?_l=en_US" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
                     </div>
                 </div>
 
