--- a/Nithin2003/Views/Admin/ApproveAsAdmin.cshtml
+++ b/Nithin2003/Views/Admin/ApproveAsAdmin.cshtml
@@ -58,7 +58,13 @@
                             <span class="nav-link-text">My Dashboard</span>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" asp-controller="Admin" asp-action="AdminAndEditor">
+                            <i class="ni ni-circle-08"></i>
+                            <span class="nav-link-text">Remove Admin or Editor</span>
 
+                        </a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link active" asp-controller="Users" asp-action="EditDetails" asp-route-Username="@Context.Session.GetString("Username")">
                             <i class="ni ni-circle-08"></i>
