--- a/Nithin2003/Views/DashBoard/Index.cshtml
+++ b/Nithin2003/Views/DashBoard/Index.cshtml
@@ -163,7 +163,13 @@
                                     <span class="nav-link-text">My Dashboard</span>
                                 </a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="Admin" asp-action="AdminAndEditor">
+                                    <i class="ni ni-circle-08"></i>
+                                    <span class="nav-link-text">Remove Admin or Editor</span>
 
+                                </a>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link active" asp-controller="Users" asp-action="EditDetails" asp-route-Username="@Model.Username">
                                     <i class="ni ni-circle-08"></i>
