--- a/Nithin2003/Views/Home/Index.cshtml
+++ b/Nithin2003/Views/Home/Index.cshtml
@@ -82,8 +82,8 @@
 
                     <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
                         <div class="content">
-                            <h3>Intruduction</h3>
-                            <h2>I am Dhasari Nithin, I graguated in BCOM (C.A) from Government Degree College Armoor under Telangana University </h2>
+                            <h3>Introduction</h3>
+                            <h2>I am Dhasari Nithin, I graduated in BCOM (C.A) from Government Degree College Armoor under Telangana University </h2>
 
                             <div class="text-center text-lg-start">
                                 <a href="#" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
@@ -1262,7 +1262,7 @@
                         @*<a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
                         <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
                         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>*@
-                                <a href="https://www.linkedin.com/in/nithin-dhasari-30263b335/?_l=en_US" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                                <a href="https://www.linkedin.com/search/results/people/?firstName=Nithin&lastName=dhasari&origin=FACETED_SEARCH&sid=B%3BD" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
                     </div>
                 </div>
 
